<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_oscuro"
    tools:context=".SugerenciaActivity">

    <EditText
        android:id="@+id/txtAsunto"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/asunto"
        android:inputType="text"
        android:textColor="@color/amarillo_logo"
        android:textColorHint="@color/texto_de_fondo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtEmail4"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtEmail4"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail4"
        tools:ignore="Autofill" />

    <ImageView
        android:id="@+id/imgLogo4"
        android:layout_width="170dp"
        android:layout_height="170dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo2" />

    <ImageView
        android:id="@+id/iconoVolver"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/desc_atras"
        android:onClick="volverAtras"
        android:src="@drawable/atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck" />


    <TextView
        android:id="@+id/txtSugerir"
        android:layout_width="330dp"
        android:layout_height="60dp"
        android:layout_marginTop="156dp"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/nombre"
        android:text="@string/sugerencia"
        android:textAlignment="center"
        android:textColor="@color/amarillo_logo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

    <EditText
        android:id="@+id/txtApellido3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:drawableStart="@drawable/outline_person_white_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/apellido"
        android:inputType="text"
        android:textColor="@color/amarillo_logo"
        android:textColorHint="@color/texto_de_fondo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtSugerir"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/txtNombre3"
        app:layout_constraintTop_toBottomOf="@+id/txtSugerir"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtNombre3"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:drawableStart="@drawable/outline_person_white_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/nombre"
        android:inputType="text"
        android:textColor="@color/amarillo_logo"
        android:textColorHint="@color/texto_de_fondo"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/txtSugerir"
        app:layout_constraintTop_toBottomOf="@+id/txtSugerir"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtEmail4"
        android:layout_width="330dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:drawableStart="@drawable/outline_email_white_24dp"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/email2"
        android:inputType="text"
        android:textColor="@color/amarillo_logo"
        android:textColorHint="@color/texto_de_fondo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtApellido3"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="@+id/txtNombre3"
        app:layout_constraintTop_toBottomOf="@+id/txtApellido3"
        tools:ignore="Autofill" />

    <EditText
        android:id="@+id/txtSugerirPregunta"
        android:layout_width="330dp"
        android:layout_height="210dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:drawablePadding="10sp"
        android:ems="10"
        android:fontFamily="@font/sprite_graffiti"
        android:gravity="top|start"
        android:hint="@string/sugerir2"
        android:inputType="textMultiLine"
        android:textColor="@color/amarillo_logo"
        android:textColorHint="@color/texto_de_fondo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/txtAsunto"
        app:layout_constraintStart_toStartOf="@+id/txtAsunto"
        app:layout_constraintTop_toBottomOf="@+id/txtAsunto"
        tools:ignore="Autofill" />

    <Button
        android:id="@+id/btnEnviar"
        android:layout_width="173dp"
        android:layout_height="48dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azuloscuro_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:text="@string/enviar"
        android:textColor="@color/celeste_logo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>