<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_oscuro"
    tools:context=".PreguntaActivity">


    <Button
        android:id="@+id/btnBuscar"
        android:layout_width="227dp"
        android:layout_height="50dp"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/azuloscuro_logo"
        android:drawableStart="@android:drawable/ic_menu_search"
        android:drawableTint="@color/celeste_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:text="@string/buscar"
        android:textColor="@color/celeste_logo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/spinnerCategorias"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="@+id/spinnerCategorias"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCategorias" />

    <EditText
        android:id="@+id/txtPonerPregunta"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/ingresar_pregunta"
        android:textAlignment="center"
        android:textColor="@color/celeste_logo"
        android:textColorHint="@color/texto_de_fondos"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6"
        tools:ignore="Autofill,TextFields,TouchTargetSizeCheck" />

    <Spinner
        android:id="@+id/spinnerCategorias"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:padding="8dp"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/txtPonerPregunta"
        app:layout_constraintTop_toBottomOf="@+id/txtOpcion3"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText

        android:id="@+id/txtOpcion1"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:buttonTint="@color/celeste_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/opcion1"
        android:textColor="@color/rosado_logo"
        android:textColorHint="@color/texto_fondo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtPonerPregunta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtPonerPregunta"
        tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtOpcion2"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:buttonTint="@color/celeste_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/opcion2"
        android:textColor="@color/rosado_logo"
        android:textColorHint="@color/texto_fondo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtOpcion1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtOpcion1"
        app:layout_constraintTop_toBottomOf="@+id/txtOpcion1"
        tools:ignore="Autofill,TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/txtOpcion3"
        style="@style/Widget.AppCompat.CompoundButton.RadioButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:autofillHints="Ingrese opcion 1"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:buttonTint="@color/celeste_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:hint="@string/opcion3"
        android:textColor="@color/rosado_logo"
        android:textColorHint="@color/texto_fondo"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/txtOpcion2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/txtOpcion2"
        app:layout_constraintTop_toBottomOf="@+id/txtOpcion2"
        tools:ignore="TextContrastCheck,TextFields,TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cb1"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:buttonTint="@color/amarillo_logo"
        app:layout_constraintBottom_toBottomOf="@+id/txtOpcion1"
        app:layout_constraintStart_toEndOf="@+id/txtOpcion1"
        app:layout_constraintTop_toTopOf="@+id/txtOpcion1"
        tools:ignore="TouchTargetSizeCheck,DuplicateSpeakableTextCheck" />

    <CheckBox
        android:id="@+id/cb2"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:buttonTint="@color/amarillo_logo"
        app:layout_constraintBottom_toBottomOf="@+id/txtOpcion2"
        app:layout_constraintStart_toEndOf="@+id/txtOpcion2"
        app:layout_constraintTop_toTopOf="@+id/txtOpcion2"
        tools:ignore="TouchTargetSizeCheck" />

    <CheckBox
        android:id="@+id/cb3"
        android:layout_width="40dp"
        android:layout_height="60dp"
        android:layout_marginStart="4dp"
        android:buttonTint="@color/amarillo_logo"
        app:layout_constraintBottom_toBottomOf="@+id/txtOpcion3"
        app:layout_constraintStart_toEndOf="@+id/txtOpcion3"
        app:layout_constraintTop_toTopOf="@+id/txtOpcion3"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginBottom="16dp"
        android:backgroundTint="@color/azuloscuro_logo"
        android:drawableStart="@android:drawable/ic_menu_save"
        android:drawableTint="@color/celeste_logo"
        android:fontFamily="@font/sprite_graffiti"
        android:text="@string/guardar"
        android:textColor="@color/celeste_logo"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/btnBuscar"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="@+id/btnBuscar" />

    <ImageView
        android:id="@+id/imgTriviaTrek"
        android:layout_width="64dp"
        android:layout_height="63dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo1" />

    <ImageView
        android:id="@+id/iconoVolver9"
        android:layout_width="60dp"
        android:layout_height="40dp"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="16dp"
        android:clickable="true"
        android:contentDescription="@string/desc_atras"
        android:onClick="volverAtras"
        android:src="@drawable/atras"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/imgPreguntaElegida"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/style_borde"
        android:backgroundTint="@color/fondo_radiobutton"
        android:contentDescription="@string/desc_pregunta"
        app:layout_constraintBottom_toTopOf="@+id/btnGuardar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnBuscar"
        tools:ignore="ImageContrastCheck" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="214dp"
        android:layout_height="81dp"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/sprite_graffiti"
        android:text="@string/desc_ingresar"
        android:textAlignment="center"
        android:textColor="@color/amarillo_logo"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="TextSizeCheck" />

</androidx.constraintlayout.widget.ConstraintLayout>